--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -35,3 +35,92 @@
     }
   }
 }
+
+// Menu overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  // this is just the styling that will be applied to both sides of menu overlay
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  // this styling is just for the nav side
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+
+    // this removes bullit points
+    list-style: none;
+
+    // this makes menu drop in from top
+    // note: -100% in translate3d
+    transform: translate3d(0, -100%, 0);
+    @include easeout;
+
+    &.show {
+      // slide from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+
+  // Branding side
+  &-branding {
+    background: $primary-color;
+    // this makes menu drop in from bottom
+    // note: 100% in translate3d
+    transform: translate3d(0, 100%, 0);
+    @include easeout;
+
+    &.show {
+      // slide from bottom
+      transform: translate3d(0, 0, 0);
+    }
+
+    // portait
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.jpg');
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
+
+  //nav-items
+  .nav-item {
+    // takes list of links off page
+    transform: translate3d(600px, 0, 0);
+    @include easeout;
+
+    //slide in from right
+    &.show {
+      transform: translate3d(0, 0, 0);
+    }
+  }
+}
+
+// Delay each nav item slide by 0.1s
+// note: SASS for loop
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.1s;
+  }
+}
