--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -26,5 +26,29 @@ $background-opacity: 0.9;
     }
   }
 }
-//
-// Menu mixin's
+
+// Media query mixins
+
+@mixin mediaSm {
+  @media screen and (max-width: 500px) {
+    @content;
+  }
+}
+
+@mixin mediaMd {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mediaLg {
+  @media screen and (min-width: 500px) and (max-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin mediaXL {
+  @media screen and (min-width: 1171px) {
+    @content;
+  }
+}
