--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -42,6 +42,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
+      // img change for smaller screens
       background: url('../img/portrait_small.jpg');
       width: 150px;
       height: 150px;
