--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
   @include background;
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -65,4 +65,13 @@ main {
       margin-top: 20vh;
     }
   }
+}
+
+// Grid template areas
+.about-info {
+  display: grid;
+  grid-template-areas:
+    'bio-image bio bio'
+    'job1 job2 job3';
+  grid-template-columns: repeat(3, 1fr);
 }
