--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,7 +127,7 @@ main {
 
 // Button Styles
 .btn {
-  display: inline-block;
+  display: block;
   padding: 0.5rem 1rem;
   border: 0;
   margin-bottom: 0.3rem;
@@ -138,9 +138,13 @@ main {
 }
 .btn-dark {
   @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
 }
 .btn-light {
   @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #fff;
 }
 
 #main-footer {
@@ -152,5 +156,5 @@ main {
 }
 
 // moved to bottom to allow other css to render first
-// before moible media query
+// before mobile media query
 @import 'mobile';
