--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,6 +125,32 @@ main {
   }
 }
 
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1rem 1.5rem;
+    margin-bottom: 3rem;
+    @include easeout;
+
+    &:hover {
+      padding: 0.5rem 1rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
 // Button Styles
 .btn {
   display: block;
@@ -146,6 +172,7 @@ main {
   background: lighten($primary-color, 50);
   color: #fff;
 }
+// end of button styles
 
 #main-footer {
   text-align: center;
